examples/test/testpolicy16501.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16501
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key42: value3
      key25: value0
      key12: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value11
      podSelector:
        matchLabels:
          key7: value24
          key41: value13
